# G4PhysicsTesting

./: .gitignore  CMakeLists.txt  CMakelists.txt  GNUmakefile  NeutReflect_1491470730_000_000.txt  NeutReflect_1491472125_000_000.txt  NeutReflect_1491473375_000_000.txt  NeutReflect_1491481937_000_000.txt  NeutReflect_1491492114_000_000.txt  NeutReflect_1491976299_000_000.txt  NeutReflectometry.cc  README.md  RELEASENOTES.md  addEscapeInfo.C  bsubNeutReflect  condorNeutReflect  countStats  default.mac  doSim.sh  eventswithhits.txt  ge.root  hitEvents.sh  rough_compilation_instructions.md  simUtil.C  simUtil.cpp  srcCloseup.mac  submitSomeJobs.sh  test.txt  working_command.md
condor/: condor-NeutReflectometry
include/: CDMS_SuperSim_PhysicsList.hh  NeutReflect_AsciiOut.hh  NeutReflect_DataStorage.hh  NeutReflect_DetectorConstruction.hh  NeutReflect_DetectorConstructionMessenger.hh  NeutReflect_EventAction.hh  NeutReflect_EventInfo.hh  NeutReflect_ParticleSource.hh  NeutReflect_ParticleSourceMessenger.hh  NeutReflect_PhysicsList.hh  NeutReflect_Physics_General.hh  NeutReflect_PrimaryGeneratorAction.hh  NeutReflect_RunAction.hh  NeutReflect_RunActionMessenger.hh  NeutReflect_StdHit.hh  NeutReflect_StdSD.hh  Shielding_ComptonsUpdate.icc
macros/: srcTest3HeTubeGeom.mac  srcTestGeom.mac
python/: Yields_and_Resolutions.ipynb  hist.py  prune.py
python/data/: awk_commands.txt
src/: NeutReflect_AsciiOut.cc  NeutReflect_DataStorage.cc  NeutReflect_DetectorConstruction.cc  NeutReflect_DetectorConstructionMessenger.cc  NeutReflect_EventAction.cc  NeutReflect_EventInfo.cc  NeutReflect_ParticleSource.cc  NeutReflect_ParticleSourceMessenger.cc  NeutReflect_PrimaryGeneratorAction.cc  NeutReflect_RunAction.cc  NeutReflect_RunActionMessenger.cc  NeutReflect_StdHit.cc  NeutReflect_StdSD.cc
